--- a/fresher_food/pubspec.yaml
+++ b/fresher_food/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   fl_chart: ^0.70.0
   flutter_stripe: ^11.1.0
   qr_flutter: ^4.1.0
+  mobile_scanner: ^5.2.1
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
