fix rate commit

--- a/fresher_food_backend/FressFood/appsettings.example.json
+++ b/fresher_food_backend/FressFood/appsettings.example.json
@@ -6,13 +6,13 @@
         }
     },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YOUR_SERVER\\SQLEXPRESS;Database=FressFood;User Id=YOUR_USER;Password=YOUR_PASSWORD;TrustServerCertificate=true;",
-    "Username": "YOUR_USER",
-    "Password": "YOUR_PASSWORD"
+    "DefaultConnection": "Server=YOUR_SERVER\\SQLEXPRESS;Database=FressFood;User Id=sa;Password=123456;TrustServerCertificate=true;",
+    "Username": "sa",
+    "Password": "123456"
   },
   "Stripe": {
-    "SecretKey": "YOUR_STRIPE_SECRET_KEY",
-    "PublishableKey": "YOUR_STRIPE_PUBLISHABLE_KEY"
+    "SecretKey": "YOUR_STRIPE_SECRET_KEY_HERE",
+    "PublishableKey": "YOUR_STRIPE_PUBLISHABLE_KEY_HERE"
   },
     "AllowedHosts": "*"
 }
