--- a/fresher_food/android/gradle.properties
+++ b/fresher_food/android/gradle.properties
@@ -1,2 +1,14 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dhttps.protocols=TLSv1.2,TLSv1.3 -Djdk.tls.client.protocols=TLSv1.2,TLSv1.3
 android.useAndroidX=true
+# Network timeout settings
+org.gradle.daemon=true
+org.gradle.parallel=true
+# Increase network timeout
+systemProp.http.connectionTimeout=60000
+systemProp.http.socketTimeout=60000
+# TLS/SSL configuration to fix handshake issues
+systemProp.https.protocols=TLSv1.2,TLSv1.3
+systemProp.jdk.tls.client.protocols=TLSv1.2,TLSv1.3
+# Retry configuration
+org.gradle.http.retry=true
+org.gradle.http.retry.maxAttempts=5
