--- a/fresher_food/android/gradle.properties
+++ b/fresher_food/android/gradle.properties
@@ -12,3 +12,5 @@ systemProp.jdk.tls.client.protocols=TLSv1.2,TLSv1.3
 # Retry configuration
 org.gradle.http.retry=true
 org.gradle.http.retry.maxAttempts=5
+# Disable Kotlin incremental compilation to avoid cross-drive path issues
+kotlin.incremental=false
