--- a/fresher_food_backend/FressFood/appsettings.example.json
+++ b/fresher_food_backend/FressFood/appsettings.example.json
@@ -1,19 +1,28 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=YOUR_SERVER\\SQLEXPRESS;Database=FressFood;User Id=sa;Password=123456;TrustServerCertificate=true;",
-    "Username": "sa",
-    "Password": "123456"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DOMINICNGUYEN\\SQLEXPRESS;Database=FressFood;User Id=sa;Password=123456;TrustServerCertificate=True;"
+  },
+
   "Stripe": {
     "SecretKey": "YOUR_STRIPE_SECRET_KEY_HERE",
     "PublishableKey": "YOUR_STRIPE_PUBLISHABLE_KEY_HERE"
   },
-    "AllowedHosts": "*"
+  "OpenAI": {
+    "ApiKey": "YOUR_OPENAI_API_KEY_HERE",
+    "Model": "gpt-3.5-turbo"
+  },
+  "VietQR": {
+    "SoTaiKhoan": "1044703803",
+    "TenChuTaiKhoan": "NGUYEN VAN THIEN",
+    "TenNganHang": "Vietcombank",
+    "MaNganHang": "970415"
+  },
+  "AllowedHosts": "*"
 }
 
