áº¨n secret keys trong appsettings.example.json

--- a/fresher_food_backend/FressFood/appsettings.example.json
+++ b/fresher_food_backend/FressFood/appsettings.example.json
@@ -6,22 +6,22 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DOMINICNGUYEN\\SQLEXPRESS;Database=FressFood;User Id=sa;Password=123456;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=YOUR_SERVER_NAME;Database=YOUR_DATABASE_NAME;User Id=YOUR_USER_ID;Password=YOUR_PASSWORD;TrustServerCertificate=True;"
   },
 
   "Stripe": {
-    "SecretKey": "YOUR_STRIPE_SECRET_KEY_HERE",
-    "PublishableKey": "YOUR_STRIPE_PUBLISHABLE_KEY_HERE"
+    "SecretKey": "YOUR_STRIPE_SECRET_KEY",
+    "PublishableKey": "YOUR_STRIPE_PUBLISHABLE_KEY"
   },
   "OpenAI": {
-    "ApiKey": "YOUR_OPENAI_API_KEY_HERE",
+    "ApiKey": "YOUR_OPENAI_API_KEY",
     "Model": "gpt-3.5-turbo"
   },
   "VietQR": {
-    "SoTaiKhoan": "1044703803",
-    "TenChuTaiKhoan": "NGUYEN VAN THIEN",
-    "TenNganHang": "Vietcombank",
-    "MaNganHang": "970415"
+    "SoTaiKhoan": "YOUR_ACCOUNT_NUMBER",
+    "TenChuTaiKhoan": "YOUR_ACCOUNT_HOLDER_NAME",
+    "TenNganHang": "YOUR_BANK_NAME",
+    "MaNganHang": "YOUR_BANK_CODE"
   },
   "AllowedHosts": "*"
 }
