ThÃªm comment tiáº¿ng Viá»‡t theo khá»‘i chá»©c nÄƒng cho cÃ¡c page user vÃ  admin

--- a/fresher_food_backend/FressFood/appsettings.example.json
+++ b/fresher_food_backend/FressFood/appsettings.example.json
@@ -6,15 +6,15 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YOUR_SERVER_NAME;Database=YOUR_DATABASE_NAME;User Id=YOUR_USER_ID;Password=YOUR_PASSWORD;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=YOUR_SERVER;Database=YOUR_DATABASE;User Id=YOUR_USER;Password=YOUR_PASSWORD;TrustServerCertificate=True;"
   },
 
   "Stripe": {
-    "SecretKey": "YOUR_STRIPE_SECRET_KEY",
-    "PublishableKey": "YOUR_STRIPE_PUBLISHABLE_KEY"
+    "SecretKey": "YOUR_STRIPE_SECRET_KEY_HERE",
+    "PublishableKey": "YOUR_STRIPE_PUBLISHABLE_KEY_HERE"
   },
   "OpenAI": {
-    "ApiKey": "YOUR_OPENAI_API_KEY",
+    "ApiKey": "YOUR_OPENAI_API_KEY_HERE",
     "Model": "gpt-3.5-turbo"
   },
   "VietQR": {
