--- a/fresher_food/pubspec.yaml
+++ b/fresher_food/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_stripe: ^11.1.0
   qr_flutter: ^4.1.0
   mobile_scanner: ^5.2.1
+  lottie: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -81,6 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/img/
+    - lib/assets/lottie/
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
