--- a/fresher_food_backend/FressFood/FressFood.csproj
+++ b/fresher_food_backend/FressFood/FressFood.csproj
@@ -16,6 +16,9 @@
     </PackageReference>
     <PackageReference Include="Stripe.net" Version="47.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.0" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.65" />
+    <PackageReference Include="EPPlus" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
