--- a/rag_service/requirements.txt
+++ b/rag_service/requirements.txt
@@ -2,6 +2,7 @@
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
+httpx>=0.25.0  # HTTP client để gọi backend API
 
 # Document processing
 python-docx>=1.1.0
@@ -11,6 +12,14 @@ openpyxl>=3.1.0
 # Embeddings
 sentence-transformers>=2.2.0
 openai>=1.3.0  # Optional: nếu muốn dùng OpenAI embeddings
+
+# Image processing
+Pillow>=10.0.0  # Image processing
+torch>=2.0.0  # PyTorch for CLIP model
+torchvision>=0.15.0  # TorchVision for image transforms
+# CLIP model - install from GitHub
+# Note: CLIP must be installed separately: pip install git+https://github.com/openai/CLIP.git
+# Or add to requirements: git+https://github.com/openai/CLIP.git
 
 # Vector stores
 chromadb>=0.4.0  # Chroma vector database
