--- a/fresher_food/pubspec.yaml
+++ b/fresher_food/pubspec.yaml
@@ -34,13 +34,17 @@ dependencies:
     sdk: flutter
   intl: ^0.20.2
   http: ^1.1.0
+  #local Storage
   shared_preferences: ^2.1.0
+  #State Management
   provider: ^6.0.5
   diacritic: ^0.1.3
   iconsax: 0.0.8
   image_picker: ^1.0.4
   file_picker: ^8.0.0
   fl_chart: ^0.70.0
+
+  #Strip Payment
   flutter_stripe: ^11.1.0
   qr_flutter: ^4.1.0
   mobile_scanner: ^5.2.1
